Configure and create database

--- a/backend/ChefKitchenAPI/ChefKitchenAPI/appsettings.json
+++ b/backend/ChefKitchenAPI/ChefKitchenAPI/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=localhost;Database=chefKitchenDb;Username=postgres;Password=admin;Include Error Detail=true"
     }
-  },
-  "AllowedHosts": "*"
 }
