--- a/backend/ChefKitchenAPI/BusinessLogic/BusinessLogic.csproj
+++ b/backend/ChefKitchenAPI/BusinessLogic/BusinessLogic.csproj
@@ -7,13 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Folder Include="DTOs\" />
-        <Folder Include="Interfaces\" />
-        <Folder Include="Services\" />
-    </ItemGroup>
-
-    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="13.0.1" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
     <ItemGroup>
