--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.0",
     "@types/react-router-hash-link": "^2.4.9",
     "framer-motion": "^11.8.0",
     "react": "^18.3.1",
