--- a/backend/ChefKitchenAPI/ChefKitchenAPI/appsettings.Development.json
+++ b/backend/ChefKitchenAPI/ChefKitchenAPI/appsettings.Development.json
@@ -1,8 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "Jwt": {
+        "Secret": "",
+        "Issuer": "chefKitchen",
+        "Audience": "account",
+        "ExpirationInMinutes":  60
     }
-  }
 }
