--- a/backend/ChefKitchenAPI/ChefKitchenAPI/ChefKitchenAPI.csproj
+++ b/backend/ChefKitchenAPI/ChefKitchenAPI/ChefKitchenAPI.csproj
@@ -28,7 +28,8 @@
 
     <ItemGroup>
 	    <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj" />
-	    <ProjectReference Include="..\Domain\Domain.csproj" />
+		<ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+		<ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
 
 </Project>
