--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.59.0",
     "@types/react-router-hash-link": "^2.4.9",
+    "axios": "^1.7.7",
     "framer-motion": "^11.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
