--- a/backend/ChefKitchenAPI/BusinessLogic/BusinessLogic.csproj
+++ b/backend/ChefKitchenAPI/BusinessLogic/BusinessLogic.csproj
@@ -8,14 +8,16 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
+      <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-      <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.1.2" />
-      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.1.2" />
+      <!--<PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.1.2" />
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.1.2" />-->
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+		<ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
