--- a/backend/ChefKitchenAPI/Infrastructure/Infrastructure.csproj
+++ b/backend/ChefKitchenAPI/Infrastructure/Infrastructure.csproj
@@ -10,10 +10,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.1.2" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.1.2" />
   </ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj" />
 		<ProjectReference Include="..\DataAccess\DataAccess.csproj" />
 	</ItemGroup>
 
